# GIPS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  ShaderFormat.md  TODO.md  md2html.cmake  version.cmake  win32_build.cmd  win32_build.ps1  win32_devshell.cmd
.github/workflows/: build.yml
logo/: logoconv.py
shaders/: vignette.glsl
shaders/Blur+Sharpen/: 3x3 Median.glsl  Bilateral Filter.glsl  Circular Blur.glsl  Dilate+Erode.glsl  Gaussian Blur.glsl  Motion Blur.glsl  Radial Blur.glsl  Simple Blur+Sharpen.glsl  Soft Median.glsl  WarpSharp.glsl  Zoom Blur.glsl
shaders/Color/: Color Balance.glsl  Color Blindness.glsl  Color Matrix.glsl  Color Temperature.glsl  Exposure.glsl  Extract Color.glsl  Gain+Offset.glsl  Hue+Saturation.glsl  Levels.glsl  Map to Gradient.glsl  Monochrome.glsl  Quantize+Dither.glsl  RGB Gain+Gamma.glsl  Saturation.glsl  Threshold.glsl
shaders/Color Space/: Linear to sRGB.glsl  sRGB to Linear.glsl
shaders/Distort/: Cubify.glsl  Glitch.glsl  Perspective.glsl  Pinch.glsl  Polar to Rectangular.glsl  Rectangular to Polar.glsl  Ripple.glsl  Scale+Rotate+Mirror.glsl  Swirl.glsl
shaders/Edges/: Contours.glsl  Edge Detection.glsl  FXAA.glsl
shaders/Effects/: CRT Screen.glsl  Chromatic Aberration.glsl  Dot Matrix Display.glsl  Halftone Screen.glsl  Vignette.glsl
shaders/Generate/: Checkerboard.glsl  Circle.glsl  Color Wheel.glsl  Dots.glsl  Noise.glsl  Zoneplate.glsl
shaders/Morphology/: Dilate+Erode.glsl
shaders/Tools/: 3x3 Kernel.glsl  Apply Bayer CFA.glsl  Convert Linear to sRGB.glsl  Convert sRGB to Linear.glsl  Debayering (PPG).glsl  Deinterlace.glsl  Invert Alpha Channel.glsl  Remove Alpha Channel.glsl  Show Alpha Channel.glsl
src/: clipboard.h  clipboard_dummy.cpp  clipboard_win32.cpp  dirlist.cpp  dirlist.h  file_util.h  file_util_posix.cpp  file_util_win32.cpp  gips_app.cpp  gips_app.h  gips_core.cpp  gips_core.h  gips_io.cpp  gips_logo.h  gips_paths.cpp  gips_shader_loader.cpp  gips_ui.cpp  gips_version.h  gl_header.h  gl_util.cpp  gl_util.h  icon.rc  libs.h  libs_c.c  libs_cpp.cpp  main.c  main.cpp  patterns.cpp  patterns.h  string_util.cpp  string_util.h  sysinfo.cpp  sysinfo.h  vfs.cpp  vfs.h
